# file-system-monitor

./: .gitignore  .gitmodules  build.py  pyproject.toml  readme.md  setup.py
pyfsmonitor/: pywinmonitor.c
pyfsmonitor/monitor/: fsmonitor.c  fsmonitor.h
pyfsmonitor/tools/: kvmap.c  kvmap.h
pywinmonitor/: __init__.py
pywinmonitor/pymonitor/: fsmonitor.c  fsmonitor.h  kvmap.c  pymonitor.c
